force-app/main/default/objects/Lead/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <label>Account Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Holding Company Group</fullName>
            </value>
            <value>
                <fullName>Holding Company Division</fullName>
            </value>
            <value>
                <fullName>Holding Company Agency</fullName>
            </value>
            <value>
                <fullName>Independent Agency</fullName>
            </value>
            <value>
                <fullName>Advertiser Direct</fullName>
            </value>
            <value>
                <fullName>Ad Network</fullName>
            </value>
            <value>
                <fullName>Ad Tech</fullName>
            </value>
            <value>
                <fullName>Independent Publisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>