force-app/main/default/objects/Lead/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <description>Action that user made on site</description>
    <label>Lead Creation Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>