force-app/main/default/objects/Lead/fields/AdForm_Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>AdForm_Products_of_Interest__c</fullName>
    <inlineHelpText>Indicates which products are being potentially sold to this Lead. Maps to the Opportunity on conversion, where the rep must then add Opportunity Products manually using this guidance.</inlineHelpText>
    <label>AdForm Products of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>RTB</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Rich Media</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>