force-app/main/default/objects/Lead/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-10 employees</fullName>
            </value>
            <value>
                <fullName>11-100 employees</fullName>
            </value>
            <value>
                <fullName>101-500 employees</fullName>
            </value>
            <value>
                <fullName>500+ employess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>