force-app/main/default/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10 employees</fullName>
            </value>
            <value>
                <fullName>11-100 employees</fullName>
            </value>
            <value>
                <fullName>101-500 employees</fullName>
            </value>
            <value>
                <fullName>500+ employees</fullName>
            </value>
            <value>
                <fullName>Large Enterprise</fullName>
                <isActive>false</isActive>
                <label>Large Enterprise</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Small Enterprise</fullName>
                <isActive>false</isActive>
                <label>Small Enterprise</label>
            </value>
            <value>
                <fullName>Startup</fullName>
                <isActive>false</isActive>
                <label>Startup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>