force-app/main/default/objects/Lead/fields/Is_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Lead__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is From Lead</label>
    <type>Checkbox</type>
</CustomField>