force-app/main/default/objects/Lead/fields/Lead_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Lead_Responsible__c</fullName>
    <inlineHelpText>For Demorequest Team Leads only</inlineHelpText>
    <label>Central Assigned PSX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evelina Simaškaitė</fullName>
            </value>
            <value>
                <fullName>Paulius Sparnaitis</fullName>
            </value>
            <value>
                <fullName>Simona Žilėnaitė</fullName>
            </value>
            <value>
                <fullName>Vilius Adomaitis</fullName>
            </value>
            <value>
                <fullName>Agnė Matuzevičiūtė</fullName>
            </value>
            <value>
                <fullName>Adelė Vainoraitė</fullName>
            </value>
            <value>
                <fullName>Agnis Vaičiūnas</fullName>
            </value>
            <value>
                <fullName>Aivaras Maceina</fullName>
            </value>
            <value>
                <fullName>Aleksandras Jakuchinas</fullName>
            </value>
            <value>
                <fullName>Aurimas Kraujalis</fullName>
            </value>
            <value>
                <fullName>Elžbieta Kašinskaja</fullName>
            </value>
            <value>
                <fullName>Gabrielė Kašauskaitė</fullName>
            </value>
            <value>
                <fullName>Lina Jančytė</fullName>
            </value>
            <value>
                <fullName>Milda Gudonavičienė</fullName>
            </value>
            <value>
                <fullName>Rokas Armalis</fullName>
            </value>
            <value>
                <fullName>Aivaras Šiurkus</fullName>
            </value>
            <value>
                <fullName>Andrius Katinas</fullName>
                <isActive>false</isActive>
                <label>Andrius Katinas</label>
            </value>
            <value>
                <fullName>Ieva Griskūnaitė</fullName>
                <isActive>false</isActive>
                <label>Ieva Griskūnaitė</label>
            </value>
            <value>
                <fullName>Ieva Juonytė</fullName>
                <isActive>false</isActive>
                <label>Ieva Juonytė</label>
            </value>
            <value>
                <fullName>Marytė Baktytė</fullName>
                <isActive>false</isActive>
                <label>Marytė Baktytė</label>
            </value>
            <value>
                <fullName>Mikas Stankevičius</fullName>
                <isActive>false</isActive>
                <label>Mikas Stankevičius</label>
            </value>
            <value>
                <fullName>Ramona Rudgalvytė</fullName>
                <isActive>false</isActive>
                <label>Ramona Rudgalvytė</label>
            </value>
            <value>
                <fullName>Ramunė Vėlyvytė</fullName>
                <isActive>false</isActive>
                <label>Ramunė Vėlyvytė</label>
            </value>
            <value>
                <fullName>Sigita Martinaitytė</fullName>
                <isActive>false</isActive>
                <label>Sigita Martinaitytė</label>
            </value>
            <value>
                <fullName>Tomas Ivanauskas</fullName>
                <isActive>false</isActive>
                <label>Tomas Ivanauskas</label>
            </value>
            <value>
                <fullName>Tomas Riauka</fullName>
                <isActive>false</isActive>
                <label>Tomas Riauka</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>