force-app/main/default/objects/Lead/fields/Lead_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Validation_Status__c</fullName>
    <label>Lead Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Lead Nurturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>