force-app/main/default/objects/Lead/fields/Marketing_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Lifecycle_Stage__c</fullName>
    <description>Lead Qualification status</description>
    <label>Marketing Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AQL</fullName>
            </value>
            <value>
                <fullName>Profiled</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>