force-app/main/default/objects/Lead/fields/Potential_Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Spend__c</fullName>
    <inlineHelpText>Converted to Account upon Lead Conversion</inlineHelpText>
    <label>Potential Annual Spend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-50K</fullName>
            </value>
            <value>
                <fullName>50K-100K</fullName>
            </value>
            <value>
                <fullName>100-500K</fullName>
            </value>
            <value>
                <fullName>500K-1M</fullName>
            </value>
            <value>
                <fullName>1M+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>