force-app/main/default/objects/Lead/fields/Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_of_Interest__c</fullName>
    <inlineHelpText>Indicates which products are being potentially sold to this Lead. Maps to the Opportunity on conversion, where the rep must then add Opportunity Products manually using this guidance.</inlineHelpText>
    <label>Products of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>Creative Solution</fullName>
            </value>
            <value>
                <fullName>DCO</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Full stack</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>RTB</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>TPAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>