force-app/main/default/objects/Lead/fields/Prospect_Score__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Score__c</fullName>
    <formula>CASE(Potential_Annual_Spend__c,
&quot;0-50K&quot;,&quot;E&quot;,
&quot;50K-100K&quot;,&quot;D&quot;,
&quot;100-500K&quot;,&quot;C&quot;,
&quot;500K-1M&quot;,&quot;B&quot;,
&quot;1M+&quot;,&quot;A&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on Lead criteria TBD, with the score of &quot;A&quot; indicating the highest-value prospect, and the score of &quot;E&quot; indicating the lowest-value prospect.</inlineHelpText>
    <label>Prospect Score</label>
    <type>Text</type>
</CustomField>