force-app/main/default/objects/Lead/fields/Publisher_Lead__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if the account type is Publisher.</inlineHelpText>
    <label>Publisher Lead</label>
    <type>Checkbox</type>
</CustomField>