force-app/main/default/objects/Lead/fields/Reason_of_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Lead_Status__c</fullName>
    <inlineHelpText>Please specify the reason for lead disqualification</inlineHelpText>
    <label>Reason of Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bad Product Fit</fullName>
            </value>
            <value>
                <fullName>Bad Actor</fullName>
            </value>
            <value>
                <fullName>Too Small</fullName>
            </value>
            <value>
                <fullName>Regional Limitation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>