force-app/main/default/objects/Lead/fields/Sales_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Role__c</fullName>
    <inlineHelpText>What role will this individual play in the potential sale?  Mapped to Contacts on Lead conversion.  Additional Contacts w/ Contact Roles can be added to the sales cycle after Lead conversion.</inlineHelpText>
    <label>Sales Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>