force-app/main/default/objects/Lead/validationRules/Account_is_BrandAdvertiser.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_BrandAdvertiser</fullName>
    <active>false</active>
    <description>When Account Type is Brand/Advertiser, Brand Name field is required</description>
    <errorConditionFormula>ISPICKVAL( Account_Type__c, &quot;Brand/Advertiser&quot;) &amp;&amp; ISBLANK(Brand_Name__c )</errorConditionFormula>
    <errorDisplayField>Brand_Name__c</errorDisplayField>
    <errorMessage>When Account Type is Brand/Advertiser, Brand Name field is required</errorMessage>
</ValidationRule>