force-app/main/default/objects/Lead/validationRules/Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Country)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country is requried</errorMessage>
</ValidationRule>